2011-03-07  vadim  <vadim@netcitadel.com>

	* IPTImporter.cpp (pushNATRule): see #2197 "iptables nat rules in
	chain OUTPUT not imported correctly"

	* iptables.g (nat_addr_range): see #2194 "iptables import problem
	with SNAT rule translating to an address range". NAT rules
	translating into address range with "-j SNAT --to-source
	192.168.1.1-192.168.1.10" did not import correctly

	* IPTImporter.cpp (pushNATRule): fixes #2195 "incorrect iptables
	import of nat rule with NETMAP target"

	* IPTImporter.cpp (pushNATRule): see #2196 "iptables nat rules
	with target REDIRECT not imported". Iptables NAT rules with target
	REDIRECT where not imported correctly.

	* IPTImporter.cpp (pushNATRule): see #2190 "support for import of
	branches in NAT rules for iptables". Implemented import of NAT
	rules in user-defined chains for iptables, these translate into
	branching NAT rules in fwbuilder.

2011-03-06  vadim  <vadim@netcitadel.com>

	* Importer.cpp (ignoreCurrentInterface): see #2152 "ASA Import -
	shutdown interfaces". Importer recognizes and skips ASA interfaces
	in "shutdown" mode.

	* IPTImporter.cpp (pushNATRule): see #2181 "Update iptables
	importer to detect inbound & outbound interfaces in NAT rules".
	Importer can now import nat rules with "-i" or "-o" interface spec.

	* NATCompiler_ipt.cpp (processNext): see #2170 "Compiler should
	generate error for invalid iptables NAT configs". Now that we
	allow the user to specify inbound and outbound interfaces in
	iptables NAT rules, compiler should verify that combination of
	requested "-i" and "-o" interfaces is in fact valid. For example
	iptables does not allow "-o" interface spec with rules that go
	into PREROUTING chain (DNAT rules) or "-i" interface spec with
	rules in POSTROUTING chain (SNAT rules).

	* IPTImporter.cpp (pushPolicyRule): see #2189 Policy importer
	warnings and errors now include line numbers to help find relevant
	lines in the original configuration file.
